--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <meta property="og:description" content="代辦事項清單">
     <meta property="og:site_name" content="ToDoList">
     <meta property="og:locale" content="zh_TW">
-    <link rel="icon" href="/image/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="icon" href="/image/favicon.ico" type="image/x-icon">    
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <!-- all.css 最好放最下面 避免被 bootstrap 覆蓋樣式-->
+    <link rel="stylesheet" href="css/all.css">
 </head>
 
 <body style="background-color: #333;">
